--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -34,3 +34,18 @@ nav ul .navlist a:hover {
     background-position: 0px -70px;
     margin-top: 0px;
 }
+
+.button {
+    text-decoration: none;
+    border: 1px solid black;
+    padding: 8px;
+    border-radius: 10px;
+    margin: 5px;
+    background-color: black;
+    color: white;
+}
+
+.button:hover {
+    font-size: 18px;
+    transition: font-size .1s ease-in;
+}
