--- a/resources/css/navbar-style.css
+++ b/resources/css/navbar-style.css
@@ -1,26 +1,3 @@
-/* nav {
-    background-color: black;
-    padding: 1px;
-    margin-bottom: 0px;
-}
-
-nav ul .navlist {
-    display: inline;
-    padding: 8px;
-}
-
-nav ul .navlist:hover {
-    background-color: white;
-}
-
-nav ul .navlist a {
-    color: white;
-}
-
-nav ul .navlist a:hover {
-    color: #1B1B1B;
-} */
-
 .navbar {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -38,4 +15,12 @@ nav ul .navlist a:hover {
 .nav-button:hover {
     color: black;
     background-color: white;
+}
+
+@media screen and (max-device-width: 480px) {
+    .navbar {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        font-size: 2em;
+    }
 }
