--- a/resources/css/index-style.css
+++ b/resources/css/index-style.css
@@ -42,21 +42,24 @@ body {
     flex-wrap: wrap;
 }
 
-.portfolio .card {
+.portfolio .pic {
     display: flex;
     justify-content: center;
     align-items: flex-end;
     border: 1px solid black;
     height: 18em;
     width: 23em;
-    margin-top: 2em;
     background-size: 180%;
     background-repeat: no-repeat;
     background-position: center;
 }
 
-.portfolio .card:hover {
+.portfolio .pic:hover {
     opacity: 0.5;
+}
+
+.portfolio .card {
+    margin-top: 2em;
 }
 
 .portfolio h3 {
