--- a/resources/css/index-style.css
+++ b/resources/css/index-style.css
@@ -74,6 +74,14 @@ body {
     text-decoration: none;
 }
 
+.portfolio p {
+    text-align: center;
+    color: white;
+    border-radius: 10px;
+    margin-top: 1%;
+    background-color: black;
+}
+
 .portfolio .dasmoto {
     background-image: url(../images/portfolio-sites/dasmoto.png);
     background-position: 0%;
